--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -8,6 +8,6 @@ body
     position fixed
     background white
     padding 15px
-    margin: 50% 50%
+    margin: 20px 20px
     cursor pointer
     width 120px
