--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -3,11 +3,17 @@
     margin 0
 body 
     overflow hidden
-#next-btn
-    display block
-    position fixed
-    background white
-    padding 15px
-    margin: 20px 20px
-    cursor pointer
-    width 120px
+
+#info
+    position: absolute
+    width: 250px
+    right: 50px
+    top 50%
+    color white
+    backdrop-filter: blur(200px)
+    #next-btn
+        background: white
+        color:black
+        padding 15px
+        cursor pointer
+        
