--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,14 +1,121 @@
 *
     padding 0
     margin 0
+    --light-color #e3e7f8
+    --medium-color #6b77a3
+    --dark-color #192a65
 body 
     overflow hidden
+    
+// 
+//HOME 
+//
+.home
+    width 100%
+    height 100%
+    position absolute
+    z-index 2
+    background linear-gradient(to bottom, var(--light-color), var(--medium-color))
+    display flex
+    justify-content center 
+    
+    // TITLE + START
+    .title-home
+        margin-top 14%   
+
+    .title-home h1
+        top 295px
+        font-size 6em
+        text-align center
+        font-family 'Roboto Condensed'
+        text-transform uppercase
+        letter-spacing 0.25em
+        background linear-gradient(to bottom, var(--dark-color) 30%, var(--light-color))
+        -webkit-background-clip text
+        -webkit-text-fill-color transparent
+
+    .title-home p#start
+        text-align center
+        font-family 'Roboto Condensed'
+        text-transform uppercase
+        margin-top 25%
+        color white
+        font-size 1.5em
+        letter-spacing 0.2em
+        cursor pointer
+
+    .title-home #start-container div.line
+        position absolute
+        left 50%
+        background-color white
+        height 1px
+        width 2px
+        cursor pointer
+        opacity 0
+
+        transition transform 0.7s ease-in-out
+        will-change transform, opacity
+
+    .title-home #start-container:hover div.line
+        opacity 1
+        transform translateX(-3px)scaleX(82)
+
+
+    // CLOCK
+    .clock .hours,
+    .clock .minutes
+        position absolute 
+        top 50%
+        left 50%
+   
+    .clock .hours
+        transform rotate(320deg)
+        will-change transform 
+
+        animation-name hours-animation
+        animation-duration 3s
+        animation-delay 2s
+        animation-timing-function cubic-bezier(0, 0, 0, 1.10)
+        animation-iteration-count 1
+        animation-fill-mode forwards
+
+    @keyframes hours-animation 
+    {
+        0% {transform :rotate(-40deg)}
+        100% {transform: rotate(-1800deg)}
+    }
+
+    .clock .needle
+        position absolute
+
+    .clock .minutes .needle
+        width 10px
+        height 333px
+        left -4px
+        bottom -4px
+        background rgba(255, 255, 255, 0.8)
+
+    .clock .hours .needle
+        width 10px
+        height 133px
+        left -4px
+        bottom -4px
+        background var(--dark-color)
+        
+    //IMAGES
+    div#romain-numbers, 
+    div#triangle
+        position absolute
+    
+
+// INFO OF MUSEUM
 
 #info
     position: absolute
     width: 250px
     right: 50px
     top 50%
+    z-index 1
     color white
     backdrop-filter: blur(200px)
     #next-btn
