--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -1,3 +1,15 @@
+@font-face
+{
+    font-family: 'avenirBook';
+    src: url('../fonts/AvenirLTStd-Book.otf') format('truetype');
+}
+@font-face
+{
+    font-family: 'avenirRoman';
+    src: url('../fonts/AvenirLTStd-Roman.otf') format('truetype');
+}
+
+
 *
     padding 0
     margin 0
