--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -247,11 +247,13 @@ body
 // INFO OF MUSEUM
 //
 #info
+    padding 2% 
     position: absolute
-    width: 250px
-    right: 50px
-    top 50%
+    width: 270px
+    right: 20px
+    top 20%
     z-index 1
+    font-family 'avenirBook'
     color white
     backdrop-filter: blur(200px)
     #next-btn
@@ -259,4 +261,10 @@ body
         color:black
         padding 15px
         cursor pointer
-        
+    #title
+        text-transform uppercase
+        padding-bottom 2%
+        font-size 1.5em
+    #description
+        font-size 0.9em 
+        line-height: 1.5
