css and html info part
html
change div and span
create new div

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -240,24 +240,53 @@ body
 // INFO OF MUSEUM
 //
 #info
-    padding 2% 
     position: absolute
-    width: 270px
+    width: 400px
     right: 20px
     top 20%
     z-index 1
     font-family 'avenirBook'
-    color white
     backdrop-filter: blur(20px)
+    
     #next-btn
-        background: white
-        color:black
+        color white
         padding 15px
         cursor pointer
+        #next-btn-text
+            color white 
+            font-size 0.9em 
+            width: 100%
+            text-align right
+        #underLine
+            margin-left: auto
+            background: white
+            width: 7.6vw
+            height: 0.3vh
     #title
+        padding: 0
+        margin: 5%
         text-transform uppercase
-        padding-bottom 2%
+        color white
         font-size 1.5em
     #description
+        padding: 0
+        margin: 5%
+        color white
         font-size 0.9em 
         line-height: 1.5
+    #questions
+        background: white
+        color: #577FA2
+        padding: 4%
+        margin-bottom: 2%
+        #question
+            text-transform uppercase
+            font-size 1em
+            padding: 0
+            margin: 5%
+            line-height: 1.6
+        #answer
+            font-size 0.9em 
+            line-height: 1.5
+            padding: 0
+            margin: 5%
