--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -259,21 +259,40 @@ body
     font-family 'avenirBook'
     backdrop-filter: blur(20px)
     transition: all 0.8s ease-in-out
-    
-    #next-btn
-        color white
-        padding 15px
-        cursor pointer
-        #next-btn-text
-            color white 
-            font-size 0.9em 
-            width: 100%
-            text-align right
-        #underLine
-            margin-left: auto
-            background: white
-            width: 7.6vw
-            height: 0.3vh
+    #button-next-prev
+        display: flex
+        #next-btn
+            
+            color white
+            padding 15px
+            cursor pointer
+            width 50%
+            #next-btn-text
+                color white 
+                font-size 0.9em 
+                width: 100%
+                text-align right
+            #underLine-next
+                margin-left: auto
+                background: white
+                width: 7.6vw
+                height: 0.3vh
+        #prev-btn
+            
+            color white
+            padding 15px
+            cursor pointer
+            width 50%
+            #prev-btn-text
+                color white 
+                font-size 0.9em 
+                width: 100%
+                text-align left
+            #underLine-prev
+                margin-right auto
+                background: white
+                width: 7.6vw
+                height: 0.3vh
     #title
         padding: 0
         margin: 5%
