:lipstick: cursor changed

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -18,7 +18,18 @@
     --dark-color #192a65
 body 
     overflow hidden
-    
+    cursor none
+
+.cursor 
+    width 55px
+    height 55px
+    border-radius 50%
+    background rgba(255,255,255,0.4)
+    position absolute
+    transform translate(-50%, -50%)
+    pointer-events none
+    z-index 100
+
 // 
 //HOME 
 //
