Home color change

--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -13,9 +13,9 @@
 *
     padding 0
     margin 0
-    --light-color #e3e7f8
-    --medium-color #6b77a3
-    --dark-color #192a65
+    --light-color #d9e2ff
+    --medium-color #3893c6
+    --dark-color #0173b2
 body 
     overflow hidden
     cursor none
