--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -61,11 +61,20 @@ body
         -webkit-background-clip text
         -webkit-text-fill-color transparent
 
+    .title-home p#little-message
+        text-align center
+        font-family 'Roboto Condensed'
+        margin-top 21%
+        color white
+        font-size 1.3em
+        opacity 0.8
+        letter-spacing 0.1em
+
     .title-home p#start
         text-align center
         font-family 'Roboto Condensed'
         text-transform uppercase
-        margin-top 23%
+        margin-top 5%
         color white
         font-size 1.5em
         letter-spacing 0.2em
