--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -158,6 +158,36 @@ body
         border-radius 50%
         background-color rgba(255, 255, 255, 0.05)
 
+    //LINKS
+    div.links
+        position absolute
+        width 100%
+        bottom 2%
+        display flex 
+        justify-content space-around
+        z-index 4
+
+    div.links p
+        font-family 'Roboto Condensed'
+        text-transform uppercase
+        color white
+        font-size 1em
+        letter-spacing 0.1em
+
+    div.links a
+        font-family 'Roboto Condensed'
+        text-decoration none
+        color white
+        opacity 0.5
+        font-size 0.7em
+        letter-spacing 0.2em
+        cursor none
+        transition opacity 0.2s ease-in
+
+    div.links a:hover
+        opacity 1
+
+
 //
 //VOLUME
 //
