--- a/src/style/main.styl
+++ b/src/style/main.styl
@@ -432,6 +432,8 @@ body
         }
     }
     #info{
+        width 100%
+        right 0
         #title,#description,#questions{
             display none
         }
@@ -439,6 +441,6 @@ body
     }
     #interaction{
         width:80%
-        text-align: right 
+        text-align: center 
     }
 }
